--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 certifi==2017.7.27.1
 chardet==3.0.4
+dj-database-url==0.4.2
+dj-static==0.0.6
 Django==1.11.4
+django-toolbelt==0.0.1
+gunicorn==19.7.1
 idna==2.6
 MySQL-python==1.2.5
 oauthlib==2.0.2
+psycopg2==2.7.3.1
 PyMySQL==0.7.11
 pytz==2017.2
 requests==2.18.4
 requests-oauthlib==0.8.0
+static3==0.7.0
 urllib3==1.22
+whitenoise==3.3.0
