--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-compat==1.0.14
 django-toolbelt==0.0.1
 gunicorn==19.7.1
 idna==2.6
+meld3==1.0.2
 MySQL-python==1.2.5
 oauthlib==2.0.2
 psycopg2==2.7.3.1
@@ -17,5 +18,6 @@ requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.10.0
 static3==0.7.0
+supervisor==3.3.3
 urllib3==1.22
 whitenoise==3.3.0
