--- a/process_task.conf
+++ b/process_task.conf
@@ -1,5 +1,5 @@
 [program:process_tasks]
-command=/.../bin/python ./manage.py process_tasks --settings=tweet_analysis.settings.prod
+command=python manage.py process_tasks
 directory=/...
 user=centos
 autostart=true
