--- a/supervisor.conf
+++ b/supervisor.conf
@@ -145,4 +145,4 @@ serverurl=http://127.0.0.1:9001
 ; include files themselves.
 
 ;[include]
-;files = process_task.conf
+files = process_task.conf
