--- a/process_task.conf
+++ b/process_task.conf
@@ -1,10 +1,10 @@
 [program:process_tasks]
-command=python manage.py process_tasks
+command=/.../bin/python ./manage.py process_tasks --settings=my_proj.settings.prod
 directory=/...
 user=centos
 autostart=true
 autorestart=true
-stdout_logfile=/.../...log
+stdout_logfile=/.../...log ; 標準出力ログ
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=5
 stdout_capture_maxbytes=1MB
